# mobile-app-config

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
scripts/: build_dist.py  install_local_symlinks.py  validate_skill.py
skills/android/: SKILL.md
skills/android-assets/: SKILL.md
skills/android-assets/agents/: openai.yaml
skills/android-firebase/: SKILL.md
skills/android-firebase/agents/: openai.yaml
skills/android-flavors/: SKILL.md
skills/android-flavors/agents/: openai.yaml
skills/android-help/: SKILL.md
skills/android-help/agents/: openai.yaml
skills/android-init/: SKILL.md
skills/android-init/agents/: openai.yaml
skills/android-mobile-config/: SKILL.md
skills/android-mobile-config-assets/: SKILL.md
skills/android-mobile-config-assets/agents/: openai.yaml
skills/android-mobile-config-firebase/: SKILL.md
skills/android-mobile-config-firebase/agents/: openai.yaml
skills/android-mobile-config-flavors/: SKILL.md
skills/android-mobile-config-flavors/agents/: openai.yaml
skills/android-mobile-config-help/: SKILL.md
skills/android-mobile-config-init/: SKILL.md
skills/android-mobile-config-network-security/: SKILL.md
skills/android-network-security/: SKILL.md
skills/android/agents/: openai.yaml
tests/: helpers.py  test_assets.py  test_config_init.py  test_firebase.py  test_flavors.py  test_network_security.py  test_package_name.py  test_skill_structure.py
(+40 files in other folders)
